syntax = "proto3";
package blogPackage;

message Blog {
    string id = 1;
    string title = 2;
    string text = 3;
}
message BlogId {
    string id = 1;
}
message BlogList {
    repeated Blog blogs = 1;
}
message NewBlog{
    string title = 1;
    string text = 2;
}
message Empty  {};
message Result {
    string status = 1;
}
service BlogService {
    rpc ListBlog (Empty) returns (BlogList);
    rpc GetBlog (BlogId) returns (Blog);
    rpc CreateBlog (NewBlog) returns (Result);
    rpc UpdateBlog (Blog) returns (Result);
    rpc DeleteBlog (BlogId) returns (Result);
}
